Fix contacts list masonry to activate only when tab is visible

--- a/public/modules/contacts/less/contacts.less
+++ b/public/modules/contacts/less/contacts.less
@@ -12,13 +12,19 @@
  */
 .contacts-contact {
   width: 128px;
-  margin: 0 10px 10px 0;
+  margin: 0 0 10px 0;
+  /*
+float: left;
+*/
   text-align: center;
-  float: left;
   overflow: hidden;
   .avatar {
     max-width: 100%;
     border-radius: 0;
+  }
+  a {
+    text-decoration: none;
+    color: @text-color;
   }
   h4 {
     margin-left: 5px;
